# panoptes

./: .gitattributes  .gitignore  CHANGELOG.adoc  CHANGELOG.md  CLAUDE.adoc  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  Cargo.toml  Containerfile  ECOSYSTEM.scm  FUNDING.yml  GOVERNANCE.adoc  Justfile  LICENSE.txt  MAINTAINERS.md  META.scm  README.adoc  REVERSIBILITY.md  ROADMAP.md  SECURITY.md  STATE.scm  TESTING-REPORT.adoc  TESTING-REPORT.scm  config.json  config.ncl  flake.nix  panoptes.db  start_scanner.oil
.clusterfuzzlite/: Dockerfile  build.sh
.github/workflows/: codeql.yml  rust-ci.yml
.well-known/: ai.txt  consent-required.txt  humans.txt  provenance.json  security.txt
fuzz/: Cargo.toml
src/: error.rs  history.rs  lib.rs  main.rs  ollama.rs  watcher.rs
src/analyzers/: archive.rs  audio.rs  code.rs  document.rs  image.rs  mod.rs  pdf.rs  video.rs
src/config/: mod.rs
src/db/: mod.rs
src/web/: mod.rs
